# Parallel-computing-coursework

./: .gitignore  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  client.cpp  indexer.cpp  inverted_index.cpp  main.cpp  web_server.cpp  web_server.h
backend/src/: file_storage.cpp  inverted_index.cpp  inverted_index.h  web_server.cpp
client/: client.py  load_test.py  main.py
server/: file_storage.cpp  file_storage.h  indexer.h  inverted_index.cpp  inverted_index.h  main.cpp  thread_pool.cpp  thread_pool.h  utils.h  web_server.cpp  web_server.h
webserver/: Dockerfile  main.py  middleware.py  requirements.txt  schemas.py
webserver/api/: index.py  router.py
webserver/client/: client.py  load_test.py  main.py
